shesmu-server/src/test/resources/good/interpolation-date.shesmu
Define standard_execution()
  Where "{Date 1970-01-01}" != "";
