shesmu-server/src/test/resources/bad/interpolation-boolean.shesmu
Input test;

Define standard_execution()
  Where "{True}" != "";
